# pine-python

./: CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml
src/pine_ai/: __init__.py  auth.py  chat.py  client.py  errors.py  sessions.py
src/pine_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pine_ai/cli/: auth.py  chat.py  main.py  sessions.py  tasks.py
src/pine_ai/models/: __init__.py  envelope.py  events.py  form.py  payment.py  session.py  task.py
src/pine_ai/transport/: envelope.py  http.py  socketio.py
src/pine_assistant/: __init__.py  client.py
src/pine_assistant/models/: events.py  payment.py
src/pine_assistant/transport/: socketio.py
tests/: run_live.py  test_basics.py
tests/integration/: test_sdk.py
