[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pine-ai"
version = "0.1.0"
description = "Pine AI SDK — Let Pine AI handle your digital chores. Socket.IO + REST client."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Pine AI"}]
keywords = ["pine-ai", "pine", "ai", "customer-service", "sdk", "socketio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-socketio[asyncio]>=5.11.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = ["click>=8.1.0", "rich>=13.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0"]

[project.urls]
Homepage = "https://github.com/RunVid/pine-python"
Repository = "https://github.com/RunVid/pine-python"
Issues = "https://github.com/RunVid/pine-python/issues"

[project.scripts]
pine = "pine_ai.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
