[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pine-assistant"
version = "0.2.0"
description = "Pine AI SDK — Let Pine AI handle your digital chores. Socket.IO + REST client."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Pine AI"}]
keywords = ["pine-assistant", "pine", "ai", "customer-service", "sdk", "socketio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-socketio[asyncio]>=5.11.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = ["click>=8.1.0", "rich>=13.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/19PINE-AI/pine-assistant-python"
Repository = "https://github.com/19PINE-AI/pine-assistant-python"
Issues = "https://github.com/19PINE-AI/pine-assistant-python/issues"

[project.scripts]
pine = "pine_assistant.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pine_assistant = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pine_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
